test/2-errors/trace-tco.test
{
  'code' : 1,
  'err' : '''\
lookup error: `unbound
trace:
  `unbound
  … 32
  test/2-errors/trace-tco.ploy:8:1:
    (f 5)
    ~~~~~
'''
}
