test/2-errors/trace-tco.ploy
<let-fn f [-n]
  if n
    <scope
      { void
        (self (isub n 1))}>
    unbound;>

(f 5)
